# jww-live-microservice/jww-live-microservice-provider/src/main/java/cn/javava/live/entity/LiveRoomPo.java
@@ -1,40 +1,0 @@
-package cn.javava.live.entity;
-
-import lombok.Data;
-import org.hibernate.annotations.DynamicUpdate;
-
-import javax.persistence.Column;
-import javax.persistence.Entity;
-import javax.persistence.Id;
-import javax.persistence.Table;
-import java.io.Serializable;
-import java.time.LocalDateTime;
-
-/**
- * 房间
- */
-@Table(name = "jww_live_room")
-@Entity
-@DynamicUpdate
-@Data
-public class LiveRoomPo implements Serializable {
-
-    @Column(name = "ID")
-    @Id
-    private String id;
-
-    @Column(name = "LIVE_ID")
-    private String liveId;
-
-    @Column(name = "CHANNEL_ID")
-    private String channelId;
-
-    @Column(name = "NAME")
-    private String name;
-
-    @Column(name = "STATE")
-    private String state;
-
-    @Column(name = "CREATE_DATE")
-    private LocalDateTime createDate;
-}
